# cassandra-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cassandra-cpp-driver-dev_2.8.1-1_amd64.deb  cassandra-cpp-driver_2.8.1-1_amd64.deb  clippy.toml  floki.yaml  rustfmt.toml  travis.yml
.floki/: Dockerfile
.github/workflows/: build.yml
examples/: batch.rs  bind_by_name.rs  cloud.rs  collections.rs  maps.rs  schema_meta.rs  simple.rs  simple_async.rs  ssl.rs
examples/disabled/: callbacks.rs  logging.rs  perf.rs  udt.rs
scripts/: cassandra-cpp-driver.control  install_ubuntu_packages.sh
src/: cass_batch.rs  cass_bytes.rs  cass_cluster.rs  cass_collection.rs  cass_column.rs  cass_compression.rs  cass_consistency.rs  cass_decimal.rs  cass_error.rs  cass_future.rs  cass_helpers.rs  cass_inet.rs  cass_iterator.rs  cass_log.rs  cass_prepared.rs  cass_result.rs  cass_row.rs  cass_schema.rs  cass_session.rs  cass_ssl.rs  cass_statement.rs  cass_string.rs  cass_uuid.rs  cass_value.rs  cassandra_ffi_rc1.rs  cql_bindgen.rs  lib.rs
src/cassandra/: aggregate.rs  batch.rs  cluster.rs  collection.rs  column.rs  compression.rs  consistency.rs  custom_payload.rs  data_type.rs  error.rs  field.rs  future.rs  inet.rs  iterator.rs  log.rs  metrics.rs  mod.rs  prepared.rs  result.rs  row.rs  session.rs  ssl.rs  statement.rs  time.rs  tuple.rs  user_type.rs  util.rs  uuid.rs  value.rs  write_type.rs
src/cassandra/policy/: retry.rs
src/cassandra/schema/: aggregate_meta.rs  column_meta.rs  function_meta.rs  keyspace_meta.rs  mod.rs  schema_meta.rs  table_meta.rs
src/cql_ffi/: aggregate.rs  batch.rs  bytes.rs  cass_iterator.rs  cluster.rs  collection.rs  column.rs  compression.rs  consistency.rs  custom_payload.rs  data_type.rs  decimal.rs  error.rs  field.rs  future.rs  helpers.rs  includes.txt  inet.rs  iterator.rs  log.rs  metrics.rs  mod.rs  prepared.rs  result.rs  row.rs  schema.rs  session.rs  ssl.rs  statement.rs  string.rs  time.rs  tuple.rs  types.rs  udf.rs  udt.rs  user_type.rs  util.rs  uuid.rs  value.rs  write_type.rs
src/cql_ffi/collection/: cass_collection.rs  cass_list.rs  cass_map.rs  cass_set.rs  collection.rs  list.rs  map.rs  mod.rs  set.rs
src/cql_ffi/future/: cass_future.rs  mod.rs  prepared_future.rs  result_future.rs  session_future.rs
src/cql_ffi/iterator/: cass_iterator.rs  list_iterator.rs  map_iterator.rs  mod.rs  result_iterator.rs  row_iterator.rs  set_iterator.rs
src/cql_ffi/policy/: retry.rs
src/cql_ffi/schema/: aggregate_meta.rs  column_meta.rs  function_meta.rs  keyspace.rs  keyspace_meta.rs  meta.rs  mod.rs  (+3 more)
src/examples/: async.rs  basic.rs  batch.rs  bind_by_name.rs  callbacks.rs  collections.rs  logging.rs  maps.rs  paging.rs  perf.rs  prepared.rs  schema_meta.rs  simple.rs  udt.rs  uuids.rs
tests/: async.rs  basic.rs  batch.rs  bind_by_name.rs  collections.rs  consistency.rs  futures.rs  logging.rs  maps.rs  paging.rs  send_static_future.rs  types.rs  uuids.rs
tests/help/: mod.rs
