[package]
description = "A Cassandra CQL driver, built on top of the DataStax C++ driver for performance and functionality."
documentation = "https://docs.rs/cassandra-cpp"
# no homepage yet
repository = "https://github.com/Metaswitch/cassandra-rs"
readme = "README.md"
keywords = [ "Cassandra", "binding", "CQL", "client", "database" ]
categories = [ "api-bindings", "database", "external-ffi-bindings", "asynchronous" ]
license = "Apache-2.0"
name = "cassandra-cpp"
version = "0.17.3-pre"
authors = ["Tupshin Harper <tupshin@tupshin.com>", "Keith Wansbrough <Keith.Wansbrough@metaswitch.com>"]
edition = "2018"

[dependencies]
slog = "2"
cassandra-cpp-sys = "1.0"
uuid = "0.8"
error-chain = "0.12"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
futures = "0.3.1"
